--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5000
 URL =  "mongodb+srv://abhisheksharma0573:iYRnxAfS30GdjCOv@cluster0.ti2ux.mongodb.net/ozark?retryWrites=true&w=majority&appName=Cluster0"
 BASE_URL = "http://localhost:5000"
+SMTP_USER = "abhisheksharma0573@gmail.com"
+SMTP_PASS = "cwlsyqqznnpcyapg"
